# SIMDIS

./: .gitignore  CMakeLists.txt  simdisConfig.cmake.in
3rd/: CMakeLists.txt  simdis_3rd_partyConfig.cmake.in
3rd/win64_vc-14.2/GDAL/3.2.3/lib/: gdal302.lib
3rd/win64_vc-14.2/GEOS/3.9.1/lib/: geos.lib  geos_c.lib
3rd/win64_vc-14.2/SQLite/3.36.0/lib/: sqlite3.lib
3rd/win64_vc-14.2/osgEarth/OSG-3.6.5/include/osgEarth/: HTTPClient
3rd/win64_vc-14.2/osgEarth/OSG-3.6.5/lib/: osgEarthTriton.lib  osgEarthTritond.lib
3rd/win64_vc-14.3/GDAL/3.2.3/lib/: gdal302.lib
3rd/win64_vc-14.3/GDAL/3.4.3/lib/: gdal304.lib
3rd/win64_vc-14.3/GEOS/3.11.0/lib/: geos.lib  geos_c.lib
3rd/win64_vc-14.3/GEOS/3.9.1/lib/: geos.lib  geos_c.lib
3rd/win64_vc-14.3/GEOS/3.9.1/lib/cmake/GEOS/: geos-targets.cmake
3rd/win64_vc-14.3/GLEW/2.1.0/lib/: GLEW.lib
3rd/win64_vc-14.3/OpenSceneGraph/3.6.5/lib/: OpenThreads.lib  OpenThreadsd.lib  osg.lib  osgAnimation.lib  osgAnimationd.lib  osgDB.lib  osgDBd.lib  osgFX.lib  osgFXd.lib  osgGA.lib  osgGAd.lib  osgManipulator.lib  osgManipulatord.lib  osgParticle.lib  osgParticled.lib  osgPresentation.lib  osgPresentationd.lib  osgShadow.lib  osgShadowd.lib  osgSim.lib  osgSimd.lib  osgTerrain.lib  osgTerraind.lib  osgText.lib  osgTextd.lib  osgUI.lib  osgUId.lib  osgUtil.lib  osgUtild.lib  osgViewer.lib  osgViewerd.lib  osgVolume.lib  osgVolumed.lib  osgWidget.lib  osgWidgetd.lib  osgd.lib
3rd/win64_vc-14.3/OpenSceneGraph/3.6.5/lib/pkgconfig/: openscenegraph-osg.pc  openscenegraph-osgAnimation.pc  openscenegraph-osgDB.pc  openscenegraph-osgFX.pc  openscenegraph-osgGA.pc  openscenegraph-osgManipulator.pc  openscenegraph-osgParticle.pc  openscenegraph-osgShadow.pc  openscenegraph-osgSim.pc  openscenegraph-osgTerrain.pc  openscenegraph-osgText.pc  openscenegraph-osgUtil.pc  openscenegraph-osgViewer.pc  openscenegraph-osgVolume.pc  openscenegraph-osgWidget.pc  openscenegraph.pc  openthreads.pc
3rd/win64_vc-14.3/SQLite/3.39.2/lib/: sqlite3.lib
3rd/win64_vc-14.3/osgEarth/OSG-3.6.5/include/osgEarth/: BuildConfig.h
3rd/win64_vc-14.3/osgEarth/OSG-3.6.5/lib/: osgEarthSilverLining.lib  osgEarthSilverLiningd.lib  osgEarthTriton.lib  osgEarthTritond.lib
3rd/win64_vc-14.3/osgQt/3.6.5/lib/: osgQt5.lib  osgQt5d.lib
3rd/win64_vc-14.3/osgQt/3.6.5/lib/pkgconfig/: openscenegraph-osgQt5.pc
3rd/win64_vc-14.3/protobuf/3.14.0/lib/: libprotobuf-lite.lib
include/simCore/Common/: Version.h
include/simData/: simData.pb.h
include/simVis/: osgEarthVersion.h
lib/: simCore.lib  simData.lib  simNotify.lib  simQt.lib  simUtil.lib  simVis.lib
